--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
         
         function showPolaroids() {
             const images = [
-                "1.JPG", "2.JPG", "3.JPG", "4.JPG", "5.JPG",
-                "6.JPG", "7.JPG", "8.JPG", "9.JPG", "10.JPG"
+                "11.jpg", "2.JPG", "3.JPG", "4.JPG", "5.JPG",
+                "6.jpg", "7.JPG", "8.JPG", "9.JPG", "10.JPG"
             ];
             const container = document.getElementById("polaroid-container");
             images.forEach((src, index) => {
