--- a/surprise-game.html
+++ b/surprise-game.html
@@ -82,7 +82,7 @@
     </div>
     
     <div class="message-container" id="messageContainer">
-        <img src="D:\New My luv\เพลง + รูป\IMG_2107.JPG" alt="Surprise!">
+        <img src="IMG_8466" alt="Surprise!">
         <h2>🎉 Surprise! You found it! 🎉</h2>
         <button class="button-next" onclick="goToNextPage()">Go to Next Page</button>
     </div>
