--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
         
         function showPolaroids() {
             const images = [
-                "1.jpg", "2.jpg", "3.jpg",
-                "4.jpg", "5.jpg", "6.jpg",
-                "7.jpg", "8.jpg", "9.jpg"
+                "1.JPG", "2.JPG", "3.JPG",
+                "4.JPG", "5.JPG", "6.jpg",
+                "7.JPG", "8.JPG", "9.JPG"
             ];
             const container = document.getElementById("polaroid-container");
             
